Finalizada a implementação da responsividade

--- a/styles/main_video.css
+++ b/styles/main_video.css
@@ -16,3 +16,9 @@
   text-align: center;
   width: 70%;
 }
+
+@media (max-width: 768px) {
+  .main__video--container__video {
+    width: 100%;
+  }
+}
