--- a/styles/main_promotion.css
+++ b/styles/main_promotion.css
@@ -32,3 +32,20 @@
 .line-through {
   text-decoration: line-through;
 }
+
+@media (max-width: 768px) {
+  .main__promotion--container__button {
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (max-width: 374px) {
+  .main__promotion--container__button {
+    font-size: 1.25rem;
+  }
+
+  .main__promotion--container__text {
+    font-size: 1.15rem;
+  }
+}
