--- a/styles/style.css
+++ b/styles/style.css
@@ -5,10 +5,6 @@
   --darker-main: #b60635;
 }
 
-html {
-  background-color: var(--secondary-color);
-}
-
 body,
 h1,
 h2,
@@ -41,7 +37,7 @@ figcaption {
 }
 
 body {
-  background: url(../backgrounds/background.png);
+  background: url(../backgrounds/background_01.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
