--- a/styles/main_header.css
+++ b/styles/main_header.css
@@ -8,7 +8,7 @@
 }
 
 .main__header--container__title {
-  color: var(--text-color);
+  color: var(--secondary-color);
   line-height: 2.5rem;
   text-align: center;
 }
