--- a/styles/main_promotion.css
+++ b/styles/main_promotion.css
@@ -6,7 +6,7 @@
 .main__promotion--container__button {
   background-color: var(--main-color);
   border-radius: 0.5rem;
-  color: var(--text-color);
+  color: var(--secondary-color);
   font-size: 2rem;
   padding: 1rem 1.5rem;
   text-decoration: none;
