--- a/styles/main_promotion.css
+++ b/styles/main_promotion.css
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+.main__promotion--container {
+  display: none;
+}
+
 .main__promotion--container__button {
   background-color: var(--main-color);
   border-radius: 0.5rem;
