--- a/styles/header.css
+++ b/styles/header.css
@@ -15,7 +15,15 @@
   font-size: 2rem;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
+  .header {
+    padding: 0.5rem;
+  }
+
+  .header__title {
+    font-size: 1.5rem;
+  }
+
   .header__container {
     width: 90%;
   }
