--- a/styles/main_header.css
+++ b/styles/main_header.css
@@ -3,10 +3,6 @@
   width: 80%;
 }
 
-.main__header--container {
-  margin-top: 2rem;
-}
-
 .main__header--container__title {
   color: var(--secondary-color);
   line-height: 2.5rem;
@@ -20,6 +16,7 @@
 
 @media (max-width: 768px) {
   .main {
+    margin: 1.5rem;
     width: 90%;
   }
 }
