--- a/styles/style.css
+++ b/styles/style.css
@@ -41,5 +41,5 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-bottom: 1rem;
+  height: auto;
 }
