adicionada seção de comentários

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 :root {
+  --commentary-background: #dfe3ee;
+  --commentary-name: #3b5998;
   --main-color: #e30842;
   --text-color: #ffffff;
   --secondary-color: #000000;
