--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   --commentary-name: #3b5998;
   --main-color: #e30842;
   --text-color: #ffffff;
+  --alt-text-color: #fce6ec;
   --secondary-color: #000000;
   --darker-main: #b60635;
 }
