--- a/styles/main__for.css
+++ b/styles/main__for.css
@@ -1,11 +1,11 @@
 .main__for--section {
-  background-color: #f184a1;
-  margin: 2rem auto;
-  width: 80%;
+  background-color: var(--benefits-background);
+  padding: 5rem 0;
+  width: 100%;
 }
 
 .main__for--section__title {
-  font-family: "Antonio", sans-serif;
+  font-family: "Secular One", sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
@@ -19,7 +19,7 @@
   gap: 2rem;
   list-style: none;
   margin: 0 auto;
-  width: 50%;
+  width: 60%;
 }
 
 .main__for--section__list__item {
@@ -27,4 +27,9 @@
   display: flex;
   font-size: 1.5rem;
   gap: 3rem;
+}
+
+.bonus {
+  margin-top: 2rem;
+  font-weight: bold;
 }
