--- a/styles/main_video.css
+++ b/styles/main_video.css
@@ -1,8 +1,9 @@
 .main__video--container {
   display: flex;
   justify-content: center;
-  margin-top: 0.5rem;
+  margin: 0.5rem auto;
   gap: 5rem;
+  width: 95%;
 }
 
 .main__video--container__video {
@@ -17,7 +18,7 @@
 
 @media (max-width: 768px) {
   .main__video--container {
-    margin: 1.5rem 0;
+    margin: 1.5rem auto;
   }
 
   .main__video--container__video {
