Alteradas as seções de comentário e beneficios

--- a/styles/main__for.css
+++ b/styles/main__for.css
@@ -1,5 +1,5 @@
 .main__for--section {
-  background-color: var(--benefits-background);
+  background-color: var(--darker-main);
   padding: 5rem 0;
   width: 100%;
 }
