--- a/styles/main__for.css
+++ b/styles/main__for.css
@@ -33,3 +33,19 @@
   margin-top: 2rem;
   font-weight: bold;
 }
+
+@media (max-width: 425px) {
+  .main__for--section__title {
+    font-size: 2rem;
+    margin: 0 auto 1.5rem auto;
+    width: 80%;
+  }
+
+  .main__for--section__list {
+    width: 80%;
+  }
+
+  .main__for--section__list__item {
+    gap: 1rem;
+  }
+}
