Alteradas as seções de comentário e beneficios

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,9 @@ address,
 video,
 img,
 figure,
-figcaption {
+figcaption,
+ul,
+li {
   box-sizing: border-box;
   font-family: "Sora", sans-serif;
   margin: 0;
