--- a/styles/main_comments.css
+++ b/styles/main_comments.css
@@ -49,7 +49,7 @@
 @media (max-width: 768px) {
   .main__comments--section {
     margin: 15rem 0 0 0;
-    padding: 3rem;
+    padding: 3rem 2rem;
   }
 
   .main__comments--section__profile__user--data {
@@ -67,11 +67,5 @@
 
   .main__comments--section__profile__user--data__figure__photo {
     width: 75%;
-  }
-}
-
-@media (max-width: 425px) {
-  .main__comments--section {
-    padding: 2rem;
   }
 }
