--- a/styles/main_header.css
+++ b/styles/main_header.css
@@ -1,5 +1,5 @@
 .main {
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
   width: 100%;
 }
 
@@ -16,6 +16,6 @@
 
 @media (max-width: 768px) {
   .main {
-    margin: 1.5rem 0;
+    margin: 1.5rem 0 0 0 0;
   }
 }
