--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,11 +1,11 @@
 .footer {
-  background-color: var(--main-color);
+  background-color: var(--secondary-color);
   padding: 1rem 0;
   text-align: center;
 }
 
 .footer__copyright {
-  color: rgba(63, 63, 63, 0.8);
+  color: rgb(125, 125, 125);
   font-size: 0.8rem;
   margin: 0 auto;
   width: 50%;
