Otimizado CSS e Js

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,22 +1,1 @@
-.footer {
-  background-color: var(--secondary-color);
-  padding: 1rem 0;
-  text-align: center;
-}
-
-.footer__copyright {
-  color: rgb(125, 125, 125);
-  font-size: 0.8rem;
-  margin: 0 auto;
-  width: 50%;
-}
-
-@media (max-width: 425px) {
-  .footer {
-    padding: 1.5rem 0;
-  }
-
-  .footer__copyright {
-    width: 70%;
-  }
-}
+.footer{background-color:var(--secondary-color);padding:1rem 0;text-align:center}.footer__copyright{color:#7d7d7d;font-size:.8rem;margin:0 auto;width:50%}@media (max-width:425px){.footer{padding:1.5rem 0}.footer__copyright{width:70%}}
