--- a/styles/main_comments.css
+++ b/styles/main_comments.css
@@ -1,71 +1,1 @@
-.main__comments--section {
-  align-items: flex-start;
-  background-color: var(--others-background);
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  justify-content: center;
-  margin: 5rem 0 0 0;
-  padding: 5rem 10rem;
-  width: 100%;
-}
-
-.main__comments--section__profile {
-  align-items: flex-start;
-  border-bottom: 1px solid var(--benefits-background);
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 0;
-  width: 100%;
-}
-
-.main__comments--section__profile:last-child {
-  border-bottom: none;
-}
-
-.main__comments--section__profile__user--data {
-  align-items: center;
-  display: flex;
-  gap: 0.5rem;
-  justify-items: flex-start;
-}
-
-.main__comments--section__profile__user--data__name {
-  color: var(--commentary-name);
-  font-weight: 500;
-}
-
-.main__comments--section__profile__user--data__figure__photo {
-  border-radius: 100%;
-  width: 100%;
-}
-
-.main__comments--section__profile__user--data__comment {
-  color: var(--secondary-color);
-  font-weight: 500;
-  margin-left: 4.5rem;
-}
-
-@media (max-width: 768px) {
-  .main__comments--section {
-    margin: 15rem 0 0 0;
-    padding: 3rem 2rem;
-  }
-
-  .main__comments--section__profile__user--data {
-    gap: 0;
-  }
-
-  .main__comments--section__profile__user--data__name {
-    font-size: 1.2rem;
-  }
-
-  .main__comments--section__profile__user--data__comment {
-    font-size: 1rem;
-    margin-left: 4rem;
-  }
-
-  .main__comments--section__profile__user--data__figure__photo {
-    width: 75%;
-  }
-}
+.main__comments--section{background-color:var(--others-background);gap:2rem;justify-content:center;margin:5rem 0 0;padding:5rem 10rem}.main__comments--section,.main__comments--section__profile{align-items:flex-start;display:flex;flex-direction:column;width:100%}.main__comments--section__profile{border-bottom:1px solid var(--benefits-background);padding:1rem 0}.main__comments--section__profile:last-child{border-bottom:none}.main__comments--section__profile__user--data{align-items:center;display:flex;gap:.5rem;justify-items:flex-start}.main__comments--section__profile__user--data__name{color:var(--commentary-name);font-weight:500}.main__comments--section__profile__user--data__figure__photo{border-radius:100%;width:100%}.main__comments--section__profile__user--data__comment{color:var(--secondary-color);font-weight:500;margin-left:4.5rem}@media (max-width:768px){.main__comments--section{margin:15rem 0 0;padding:3rem 2rem}.main__comments--section__profile__user--data{gap:0}.main__comments--section__profile__user--data__name{font-size:1.2rem}.main__comments--section__profile__user--data__comment{font-size:1rem;margin-left:4rem}.main__comments--section__profile__user--data__figure__photo{width:75%}}
