--- a/styles/main_for.css
+++ b/styles/main_for.css
@@ -1,51 +1,1 @@
-.main__for--section {
-  background-color: var(--darker-main);
-  padding: 5rem 0;
-  width: 100%;
-}
-
-.main__for--section__title {
-  font-family: "Secular One", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 600;
-  margin-bottom: 1.5rem;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.main__for--section__list {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  list-style: none;
-  margin: 0 auto;
-  width: 60%;
-}
-
-.main__for--section__list__item {
-  align-items: center;
-  display: flex;
-  font-size: 1.5rem;
-  gap: 3rem;
-}
-
-.bonus {
-  margin-top: 2rem;
-  font-weight: bold;
-}
-
-@media (max-width: 425px) {
-  .main__for--section__title {
-    font-size: 2rem;
-    margin: 0 auto 1.5rem auto;
-    width: 80%;
-  }
-
-  .main__for--section__list {
-    width: 80%;
-  }
-
-  .main__for--section__list__item {
-    gap: 1rem;
-  }
-}
+.main__for--section{background-color:var(--darker-main);padding:5rem 0;width:100%}.main__for--section__title{font-family:Secular One,sans-serif;font-size:2.5rem;font-weight:600;margin-bottom:1.5rem;text-align:center;text-transform:uppercase}.main__for--section__list{display:flex;flex-direction:column;gap:2rem;list-style:none;margin:0 auto;width:60%}.main__for--section__list__item{align-items:center;display:flex;font-size:1.5rem;gap:3rem}.bonus{font-weight:700;margin-top:2rem}@media (max-width:425px){.main__for--section__title{font-size:2rem;margin:0 auto 1.5rem;width:80%}.main__for--section__list{width:80%}.main__for--section__list__item{gap:1rem}}
