--- a/styles/main_header.css
+++ b/styles/main_header.css
@@ -1,21 +1,1 @@
-.main {
-  margin: 1rem 0 0 0;
-  width: 100%;
-}
-
-.main__header--container__title {
-  color: var(--secondary-color);
-  line-height: 2.5rem;
-  text-align: center;
-}
-
-.attention {
-  background-color: var(--main-color);
-  padding: 0.2rem;
-}
-
-@media (max-width: 768px) {
-  .main {
-    margin: 1.5rem 0 0 0 0;
-  }
-}
+.main{margin:1rem 0 0;width:100%}.main__header--container__title{color:var(--secondary-color);line-height:2.5rem;text-align:center}.attention{background-color:var(--main-color);padding:.2rem}@media (max-width:768px){.main{margin:1.5rem 0 0}}
