--- a/styles/main_promotion.css
+++ b/styles/main_promotion.css
@@ -1,58 +1,1 @@
-.main__promotion--container {
-  margin: 2rem 0;
-  text-align: center;
-}
-
-.main__promotion--container {
-  display: none;
-}
-
-.main__promotion--container__button {
-  background-color: var(--main-color);
-  border-radius: 0.5rem;
-  color: var(--text-color);
-  font-size: 2rem;
-  padding: 1rem 1.5rem;
-  text-decoration: none;
-  transition: all ease 0.3s;
-}
-
-.main__promotion--container__button:focus {
-  outline: none;
-}
-
-.main__promotion--container__button:hover {
-  background-color: var(--darker-main);
-}
-
-.main__promotion--container__text {
-  color: var(--secondary-color);
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 1.5rem 0 0 0;
-}
-
-.line-through {
-  text-decoration: line-through;
-}
-
-@media (max-width: 768px) {
-  .main__promotion--container {
-    margin: 0.5rem 0;
-  }
-
-  .main__promotion--container__button {
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
-  }
-}
-
-@media (max-width: 374px) {
-  .main__promotion--container__button {
-    font-size: 1.25rem;
-  }
-
-  .main__promotion--container__text {
-    font-size: 1.15rem;
-  }
-}
+.main__promotion--container{display:none;margin:2rem 0;text-align:center}.main__promotion--container__button{background-color:var(--main-color);border-radius:.5rem;color:var(--text-color);font-size:2rem;padding:1rem 1.5rem;text-decoration:none;transition:all .3s ease}.main__promotion--container__button:focus{outline:none}.main__promotion--container__button:hover{background-color:var(--darker-main)}.main__promotion--container__text{color:var(--secondary-color);font-size:1.5rem;font-weight:700;margin:1.5rem 0 0}.line-through{text-decoration:line-through}@media (max-width:768px){.main__promotion--container{margin:.5rem 0}.main__promotion--container__button{font-size:1.5rem;padding:.5rem 1rem}}@media (max-width:374px){.main__promotion--container__button{font-size:1.25rem}.main__promotion--container__text{font-size:1.15rem}}
