--- a/styles/main_video.css
+++ b/styles/main_video.css
@@ -1,33 +1,1 @@
-.main__video--container {
-  display: flex;
-  justify-content: center;
-  margin: 0.5rem auto;
-  gap: 5rem;
-  width: 95%;
-}
-
-.main__video--container__video {
-  align-items: center;
-  display: flex;
-  font-size: 2rem;
-  height: 385px;
-  justify-content: center;
-  text-align: center;
-  width: 685px;
-}
-
-@media (max-width: 768px) {
-  .main__video--container {
-    margin: 1.5rem auto;
-  }
-
-  .main__video--container__video {
-    width: 100%;
-  }
-}
-
-@media (max-width: 425px) {
-  .main__video--container__video {
-    height: 215px;
-  }
-}
+.main__video--container{display:flex;gap:5rem;justify-content:center;margin:.5rem auto;width:95%}.main__video--container__video{align-items:center;display:flex;font-size:2rem;height:385px;justify-content:center;text-align:center;width:685px}@media (max-width:768px){.main__video--container{margin:1.5rem auto}.main__video--container__video{width:100%}}@media (max-width:425px){.main__video--container__video{height:215px}}
