--- a/styles/style.css
+++ b/styles/style.css
@@ -1,49 +1,1 @@
-:root {
-  --commentary-background: #dfe3ee;
-  --commentary-name: #3b5998;
-  --main-color: #e30842;
-  --text-color: #ffffff;
-  --alt-text-color: #fce6ec;
-  --secondary-color: #000000;
-  --darker-main: #b60635;
-  --benefits-background: #f184a1;
-  --others-background: #f7b5c6;
-}
-
-::selection {
-  color: var(--text-color);
-  background-color: var(--darker-main);
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-span,
-strong,
-button,
-main,
-header,
-nav,
-section,
-article,
-div,
-a,
-abbr,
-acronym,
-address,
-video,
-img,
-figure,
-figcaption,
-ul,
-li {
-  box-sizing: border-box;
-  font-family: "Sora", sans-serif;
-  margin: 0;
-  padding: 0;
-}
+:root{--commentary-background:#dfe3ee;--commentary-name:#3b5998;--main-color:#e30842;--text-color:#fff;--alt-text-color:#fce6ec;--secondary-color:#000;--darker-main:#b60635;--benefits-background:#f184a1;--others-background:#f7b5c6}::selection{background-color:var(--darker-main);color:var(--text-color)}a,abbr,acronym,address,article,body,button,div,figcaption,figure,h1,h2,h3,h4,h5,h6,header,img,li,main,nav,p,section,span,strong,ul,video{box-sizing:border-box;font-family:Sora,sans-serif;margin:0;padding:0}
