--- a/styles/header.css
+++ b/styles/header.css
@@ -1,30 +1,1 @@
-.header {
-  background-color: var(--main-color);
-  color: var(--text-color);
-  padding: 2rem 0;
-  text-align: center;
-  width: 100%;
-}
-
-.header__container {
-  margin: 0 auto;
-  width: 80%;
-}
-
-.header__title {
-  font-size: 2rem;
-}
-
-@media (max-width: 768px) {
-  .header {
-    padding: 1.5rem;
-  }
-
-  .header__title {
-    font-size: 1.75rem;
-  }
-
-  .header__container {
-    width: 90%;
-  }
-}
+.header{background-color:var(--main-color);color:var(--text-color);padding:2rem 0;text-align:center;width:100%}.header__container{margin:0 auto;width:80%}.header__title{font-size:2rem}@media (max-width:768px){.header{padding:1.5rem}.header__title{font-size:1.75rem}.header__container{width:90%}}
